After removing itk, don't run tests against it.

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,4 @@ before_install:
 
 script:
     - python -m flake8 --config=flake8.cfg *
-    - python -m unittest -v testITKOpenSlide
+    # - python -m unittest -v testITKOpenSlide
